# kimyguide

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_cli.py
data/processed/: openlearn_courses.csv  openlearn_embeddings_cache.npz
notebooks/: 02_tfidf_prototype.ipynb
reports/figures/: prelim_eval_results.csv
scripts/: generate_mooclike_dataset.py  openlearn_clean.py  openlearn_collect.py
src/kimyguide/: __init__.py
src/kimyguide/api/: app.py  schemas.py
src/kimyguide/data/: loader.py  mooccube_adapter.py
src/kimyguide/explain/: simple_explainer.py
src/kimyguide/features/: text_embeddings.py
src/kimyguide/models/: embedding_recommender.py  hybrid_recommender.py  tfidf_recommender.py
src/kimyguide/ui/: __init__.py  evaluation.py
src/kimyguide/ui/static/: compare.js  dataset.js  eval.js  ui.js
src/kimyguide/ui/templates/: compare.html  dataset.html  eval.html  home.html  ui.html
tests/: __init__.py  test_api_health.py  test_api_recommend_models.py  test_api_recommend_validation.py  test_hybrid_recommender_unit.py
